# fastapi-boilerplate

./: .gitignore  .pre-commit-config.yaml  .prettierrc  COMPARISON.md  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  PROGRESS.md  QUICK_START.md  README.md  STACK_RECOMMENDATION.md  STRUCTURE_COMPARISON.md  SUMMARY.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
app/api/v1/auth/: __init__.py  routes.py  schemas.py
app/api/v1/templates/: __init__.py  routes.py  schemas.py
app/api/v1/users/: __init__.py  routes.py  schemas.py
app/common/: dependencies.py  exceptions.py  schemas.py
app/core/: arq_config.py  config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  template.py  user.py
app/repositories/: __init__.py  base.py  template_repository.py  user_repository.py
app/services/: __init__.py  background_tasks.py  cache_service.py  email_service.py  template_service.py  user_service.py
app/templates/: welcome.html
tests/: conftest.py  test_auth.py  test_users.py
